# zmax-gui

./: .gitignore  .gitmodules  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: editor_tools.rs  fs_ops.rs  git_ext.rs  git_tools.rs  lib.rs  main.rs  open_intake.rs  project.rs  sidecar.rs  stryke_lsp.rs  terminal.rs  text_tools.rs  window_ops.rs  workbench_ext.rs
docs/: index.html  report.html
frontend/: fb-backend.js  index.html  main.js  menu.js  menu.test.cjs  panels.css  panels.js  zemacs.css
scripts/: copy-embed-terminal.mjs  copy-file-browser.mjs  copy-hooks-editor.mjs  copy-i18n.mjs  copy-webui.mjs  localinstall.sh  mvim  prepare-stryke-sidecar.mjs  prepare-zemacs-sidecar.mjs  prepare-zmax-sidecar.mjs  test.sh
