# zemacs-gui — the GUI app wrapper around zemacs (a Helix fork TUI editor). A thin Tauri v2 host
# that runs the `zemacs` binary in an embedded PTY terminal, with the shared zgui-core baseline.
[workspace]

[package]
name = "zemacs-gui"
version = "0.2.10"
edition = "2021"
description = "zemacs-gui — desktop GUI wrapper around the zemacs editor (Helix fork), Tauri v2 + zgui baseline"
license = "UNLICENSED"
publish = false

[lib]
name = "zemacs_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Project-wide find-in-files (regex + literal search); foundational, vendorable, durable crate.
regex = "1"
# MacVim "open from Finder / mvim CLI / mvim:// URL" — forward a 2nd launch's files into the running
# window (single-instance) and register the URL scheme (deep-link).
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
# Open the log file / data dir in the OS default app (appShell Diagnostics buttons).
tauri-plugin-opener = "2"
# GUI Automation Bus: per-app zgui-bridge Unix socket so stryke scripts can drive the whole appShell
# surface by name (App::open("zemacs-gui")) or from a hook (App::here()->verbs()).
zgui-bridge = { path = "../../crates/zgui-bridge" }
# Shared embedded PTY terminal (also used by Audio-Haxor, ztunnel, ztranslator, zpwr-daw).
# The editor (zemacs) runs inside this terminal.
zpwr-embed-terminal = { path = "../../crates/zpwr-embed-terminal" }
# Private host-side app-shell helpers (data-dir resolution + prefs) — see zgui-core/crate.
zgui-shell = { path = "../../crates/zgui-core/crate" }
# Shared multi-pane file browser (also used by zemail, ztranslator, zstation). The `tauri` feature
# compiles the thin `#[tauri::command]` fs_* wrappers + the directory watcher that back the browser.
zpwr-file-browser = { path = "../../crates/zpwr-file-browser/crate", features = ["tauri"] }
# Live system stats for the shared powerline status bar (ZGui.powerline), linked in-process
# (no native-messaging worker). Backs the sys_stats command; mirrors zphoto/zoffice.
zwire-host = { path = "../../crates/zwire-host", default-features = false, features = ["sysinfo-caps"] }
sysinfo = "0.33"   # match zwire-host's sysinfo so the System/Networks/Disks types line up

# MacVim transparency + blurradius analog (translucent blurred window material).
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"
# Register ApplePressAndHoldEnabled=NO at startup so holding a key REPEATS it (editor
# behaviour) instead of popping macOS's accent-character menu on the xterm textarea.
objc2 = "0.6"
